Add Options Pages documentation (#27)
* docs: add Options Pages documentation

- Add general "Options Pages" guide with ACF section
- Document `options` key in Dynamic Data Keys

* Add "new" badge to Options Pages sidebar

Add "new" badge to Options Pages sidebar after PR #28 is merged

---------

Co-authored-by: Kevin Geary <kevin@digitalgravy.co>

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -251,26 +251,27 @@ td p:last-child {
 	margin-bottom: 0;
 }
 
-/* Show line numbers on all code blocks */
+/* Show line numbers on code blocks with 5+ lines */
 .prism-code {
 	counter-reset: line-number;
 }
 
-.prism-code .token-line::before {
+.prism-code:has(.token-line:nth-child(5)) .token-line::before {
 	counter-increment: line-number;
 	content: counter(line-number);
 	display: inline-block;
-	width: 3em;
+	width: 1em;
 	padding-right: 1em;
-	margin-right: 0.5em;
+	margin-right: 1.25em;
 	text-align: right;
 	color: var(--ifm-color-emphasis-600);
 	user-select: none;
 	border-right: 1px solid var(--ifm-color-emphasis-300);
+	opacity: 0.5;
 }
 
 /* Adjust for dark mode */
-[data-theme='dark'] .prism-code .token-line::before {
+[data-theme='dark'] .prism-code:has(.token-line:nth-child(5)) .token-line::before {
 	color: var(--ifm-color-emphasis-500);
 	border-right-color: var(--ifm-color-emphasis-200);
 }
